[gd_scene load_steps=6 format=3 uid="uid://bg2sc10wnyumh"]

[ext_resource type="PackedScene" uid="uid://beuwx1khg0uwm" path="res://Entity/Tools/hitbox.tscn" id="1_oklae"]
[ext_resource type="Script" path="res://Entity/DataServer/Projectiles/bullet_targeted.gd" id="1_p0ofd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wgq8w"]
albedo_color = Color(0.33, 0.732, 1, 1)
emission_enabled = true
emission = Color(0, 0.0499997, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_gud7a"]
material = SubResource("StandardMaterial3D_wgq8w")
radius = 0.3
height = 0.6
radial_segments = 4
rings = 1
is_hemisphere = true

[sub_resource type="SphereShape3D" id="SphereShape3D_m8fub"]
radius = 0.182439

[node name="BulletTargeted" type="Node3D" groups=["server_bullet"]]
script = ExtResource("1_p0ofd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("SphereMesh_gud7a")

[node name="TimeToLive" type="Timer" parent="."]
one_shot = true

[node name="ChangeStateTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." groups=["server_bullet"] instance=ExtResource("1_oklae")]

[node name="CollisionShape3D" parent="Hitbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.186194)
shape = SubResource("SphereShape3D_m8fub")

[connection signal="timeout" from="TimeToLive" to="." method="_on_time_to_live_timeout"]
[connection signal="timeout" from="ChangeStateTimer" to="." method="_on_change_state_timer_timeout"]

[editable path="Hitbox"]
